Bug 464693 - Dolphin does not open with the previous tabs when launched by an external app (via 'Show in the folder' or 'Open containing folder')
Summary: Dolphin does not open with the previous tabs when launched by an external app...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 468966 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-01-23 14:12 UTC by Patrick Silva
Modified: 2026-05-04 09:30 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video recording of the issue (938.14 KB, video/x-matroska)
2023-04-06 18:46 UTC, b2
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-01-23 14:12:51 UTC
STEPS TO REPRODUCE
1. open Dolphin 
2. make sure 'Show on startup: Folders, tabs, add window state from last time' option is selected in 'Startup' section of Dolphin settings
3. open some tabs
4. close Dolphin
5. take a screenshot with Spectacle and save it - a notification appears
6. click on the hamburger button of the notification and choose 'Open containing folder'

OBSERVED RESULT
Dolphin opens without the tabs open in the step 3

EXPECTED RESULT
Dolphin opens with the tabs open in the step 3

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.26.90
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8
Graphics Platform: Wayland
Comment 1 b2 2023-04-06 18:46:45 UTC
Created attachment 157907 [details]
Video recording of the issue

Same for me. Attached a recording of the issue.

SOFTWARE/OS VERSIONS
Linux: Fedora 36
KDE Plasma: 5.27.1
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
I have removed any other file managers I had in case it interfered.
Comment 2 Patrick Silva 2023-04-26 11:03:14 UTC
*** Bug 468966 has been marked as a duplicate of this bug. ***
Comment 3 Steven Eastland 2023-05-18 16:37:32 UTC
This is also happening to me.  My observations:

I have "Show on startup: Folders, tabs, add window state from last time" selected. After closing Dolphin:

* Opening it again from a pinned entry in the Icons-Only Task Manager does not remember the last tabs.
* Restoring it after login from a saved session does not remember the last tabs.
* Opening it again using the Meta+E shortcut DOES remember the last tabs.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.27.5
KDE Frameworks Version: 5.106.0
Qt Version: 5.15.9
Kernel Version: 6.3.2-arch1-1 (64-bit)
Comment 4 Patrick Silva 2023-05-18 16:44:07 UTC
you are facing bug 469656
Comment 5 TraceyC 2025-08-06 00:54:54 UTC
fixes and improvements since this was reported, and this issue may have been fixed.

Can you please re-test on your system with Dolphin 25.04.3 or later and let us know if you can still reproduce the problem? If you can, please set this report back to REPORTED. Thanks!
Comment 6 Patrick Silva 2025-08-06 11:14:56 UTC
Can reproduce with provided steps.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.1
Graphics Platform: Wayland
Comment 7 Real Name Here 2025-08-11 05:14:51 UTC
For me, dolphin doesn't remember additional tabs when launched by an external QT program then closed. If I open a folder in qbittorrent, close dolphin, then launch dolphin independently, the qBittorrent tab is forgotten.

With GTK apps such as Firefox, using the "Show In Folder" from the Downloads menu launches Dolphin with a singular tab of that folder without the previously saved tabs. If I close dolphin then reopen the previous tabs are restored and the Firefox tab is forgotten.

KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Graphics Platform: Wayland
dolphin 25.04.3
Comment 8 TraceyC 2025-08-14 17:15:30 UTC
(In reply to Real Name Here from comment #7)
> With GTK apps such as Firefox, using the "Show In Folder" from the Downloads
> menu launches Dolphin with a singular tab of that folder without the
> previously saved tabs. If I close dolphin then reopen the previous tabs are
> restored and the Firefox tab is forgotten.

I can reproduce this on git-master.
Comment 9 Real Name Here 2025-08-15 04:08:01 UTC
(In reply to TraceyC from comment #8)
> (In reply to Real Name Here from comment #7)
> > With GTK apps such as Firefox, using the "Show In Folder" from the Downloads
> > menu launches Dolphin with a singular tab of that folder without the
> > previously saved tabs. If I close dolphin then reopen the previous tabs are
> > restored and the Firefox tab is forgotten.
> 
> I can reproduce this on git-master.

Another QT app example, Kate:

1. Launch Dolphin with a few tabs.
2. Close Dolphin
3. Launch Kate > File> Open File > Right Click Folder > Open Folder With Dolphin
4. Close Dolphin
5. Open Dolphin and the Kate tab is forgotten, but tabs from step 1 are remembered.

Thank you for tracking and working on resolving this bug!
Comment 10 Danijel Zezelic 2026-03-25 11:24:08 UTC
Same behavior with Gwenview, also.
Comment 11 Bug Janitor Service 2026-04-25 09:02:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1257
Comment 12 Méven 2026-05-04 09:30:55 UTC
Git commit 173794ce15620aa0c673464f532cfd67f55ab278 by Méven Car, on behalf of Sergey Katunin.
Committed on 04/05/2026 at 08:42.
Pushed by meven into branch 'master'.

Restore session if this is the first instance

1. Restore session if this is the first instance
even with "new-window" option.

Otherwise, if Dolphin has not been opened before,
and a program (such as browsers or Kate) that
launch Dolphin with "new-window" option will
start Dolphin, it opens only with one tab and
closes the user's previous session.

With this patch, the behavior is similar to
how the first instance of browsers opens
with setting for tab recovery enabled.

Also restore sessions if this is restoring
multiple instances with session restoration
after reboot enabled.

2. Dolphin should not restore all tabs for
additional instances.

This is especially noticeable if the
"Keep a single Dolphin window, opening new folders
in tabs" checkbox is turned off, and when the
Dolphin window is already open (with several tabs),
folders from the desktop (plasmashell) are opened
by double-clicking. Desktop opens a new Dolphin
window with the tabs restored and an open folder
at the end.
Related: bug 448707, bug 469271

M  +6    -4    src/main.cpp

https://invent.kde.org/system/dolphin/-/commit/173794ce15620aa0c673464f532cfd67f55ab278