Restore session if this is the first instance

1. Restore session if this is the first instance
even with "new-window" option.

Otherwise, if Dolphin has not been opened before,
and a program (such as browsers or Kate) that
launch Dolphin with "new-window" option will
start Dolphin, it opens only with one tab and
closes the user's previous session.

With this patch, the behavior is similar to
how the first instance of browsers opens
with setting for tab recovery enabled.

Also restore sessions if this is restoring
multiple instances with session restoration
after reboot enabled.

2. Dolphin should not restore all tabs for
additional instances.

This is especially noticeable if the
"Keep a single Dolphin window, opening new folders
in tabs" checkbox is turned off, and when the
Dolphin window is already open (with several tabs),
folders from the desktop (plasmashell) are opened
by double-clicking. Desktop opens a new Dolphin
window with the tabs restored and an open folder
at the end.

BUG: 464693
CCBUG: 448707
CCBUG: 469271